# AiryEngine

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
.qodo/: history.sqlite
AiryEngineCore/: CMakeLists.txt
AiryEngineCore/includes/AiryEngineCore/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Keys.hpp  Log.hpp  Renderer.hpp  ResourceManager.hpp  fps_keeper.hpp  timer.hpp
AiryEngineCore/includes/AiryEngineCore/Physics/: CollisionDetector.hpp
AiryEngineCore/includes/AiryEngineCore/Physics/CollidingObjects/: CubeCollidingObject.hpp  SphereCollidingObject.hpp
AiryEngineCore/includes/AiryEngineCore/Rendering/OpenGL/: Model3D.hpp
AiryEngineCore/includes/AiryEngineCore/Scene/: Model3D.hpp
AiryEngineCore/includes/AiryEngineCore/Utils/: test.hpp
AiryEngineCore/src/AiryEngineCore/: Application.cpp  Camera.cpp  Input.cpp  Renderer.cpp  ResourceManager.cpp  Window.cpp  Window.hpp  fps_keeper.cpp  timer.cpp
AiryEngineCore/src/AiryEngineCore/Modules/: UIModule.cpp  UIModule.hpp
AiryEngineCore/src/AiryEngineCore/Physics/: CollisionDetector.cpp
AiryEngineCore/src/AiryEngineCore/Physics/CollidingObjects/: CubeCollidingObject.cpp  SphereCollidingObject.cpp
AiryEngineCore/src/AiryEngineCore/Rendering/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Model3D.cpp  Model3D.hpp  Renderer_OpenGL.cpp  Renderer_OpenGL.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
AiryEngineCore/src/AiryEngineCore/ResourceManaging/: ResourceManager.cpp  ResourceManager.hpp
AiryEngineCore/src/AiryEngineCore/Scene/: Model3D.cpp
AiryEngineCore/src/AiryEngineCore/Utils/: test.cpp
AiryEngineEditor/: CMakeLists.txt
AiryEngineEditor/src/: main.cpp
OurFirstGame/: CMakeLists.txt
OurFirstGame/src/: event_dispatcher.hpp  game_application.cpp  game_application.hpp  game_object_renderer.cpp  game_object_renderer.hpp  game_round.cpp  game_round.hpp  main.cpp
OurFirstGame/src/game_objects/: barrier.cpp  barrier.hpp  car.cpp  car.hpp  coin.cpp  coin.hpp  fuel_canister.cpp  fuel_canister.hpp  game_object.cpp  game_object.hpp  road.cpp  road.hpp
OurFirstGame/src/game_objects/old/: _car.hpp  _road.cpp  _road.hpp  barrier (Копия).cpp  coin (Копия).cpp  coin (Копия).hpp  fuel_canister (Копия).cpp  fuel_canister (Копия).hpp
Resources/Models/: Cube.mtl  Sphere.mtl
Resources/Models/Ball/: Ball.mtl
Resources/Models/CartoonCity/: CartoonCity2.mtl
Resources/Models/FunnyRider/Coin/: Monetka.mtl  Monetka12.mtl
Resources/Models/FunnyRider/Kanister/: Kanistra.mtl
Resources/Models/FunnyRider/Pregrados/: Pregrados.mtl
Resources/Models/FunnyRider/Pregrados2/: Pregrados2.mtl
Resources/Models/FunnyRider/Road/: WayOne (Копия).mtl  WayOne.mtl
Resources/Models/FunnyRider/SportCar/: Mashina12.mtl  SportCar.mtl
Resources/Models/FunnyRider/StartRoad/: StartPoint.mtl
Resources/Models/FunnyRider/TreeBig/: TreeBig.mtl
Resources/Models/FunnyRider/TreeSmall/: TreeSmall.mtl
Resources/Shaders/: collision_fragment_shader.txt  default_fragment_shader.txt  fragment_model3D_material.txt  fragment_model3D_texture.txt  fragment_shader.txt  light_source_fragment_shader.txt  light_source_vertex_shader.txt  vertex_model3D_texture.txt  vertex_shader.txt
resources/shaders/: vertex_shader.txt
shaders/: fragment_shader.txt
src/: ResourceManager.cpp  ResourceManager.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h
